feat(analytics): filter by last project update
